--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="font.css">
     <link rel="stylesheet" href="main.css">   
     
-   <!---- <h1><marquee> HOJA DE VIDA</marquee></h1>-->
+   <!-- <h1><marquee> HOJA DE VIDA</marquee></h1>-->
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
